--- a/static/home.css
+++ b/static/home.css
@@ -88,6 +88,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   font-family: 'ROsanswebtext', sans-serif;
   background-color: #f5f5f5;
@@ -97,6 +101,11 @@ body {
   min-height: 100vh;
 }
 
+a {
+  /* mousehover */
+  cursor: pointer;
+}
+
 /* Header Styles */
 header {
   text-align: center;
@@ -104,12 +113,13 @@ header {
 }
 
 #company-logo {
-  width: 100px;
+  width: 120px;
   height: auto;
+  margin-bottom: -15px;
 }
 
-/* Progress Bar Styles */
-.progress-bar {
+/* Progress Styles */
+.progress {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -126,52 +136,37 @@ header {
   position: relative;
 }
 
-.step:not(:last-child)::after {
-  content: '';
-  position: absolute;
-  top: 25px;
-  right: -50%;
-  width: 100%;
-  height: 2px;
-  background-color: #e0e0e0;
-  z-index: -1;
-}
-
 .step-icon {
   width: 40px;
   height: 40px;
-  margin-bottom: 8px;
+  margin-bottom: 1px;
 }
 
 .step-text {
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: bold;
   text-align: center;
   color: white;
 }
 
 /* Active Step Styles */
 .step.active .step-icon {
-  border: 2px solid #007BFF;
-  border-radius: 50%;
-  padding: 2px;
+
 }
 
 .step.active .step-text {
-  color: #007BFF;
-  font-weight: bold;
+
 }
 
 /* Content Section Styles */
 #content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
   padding: 40px 10%;
   background-color: #ffffff;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+  flex: 1;
 }
 
 /* Button styles */
@@ -198,4 +193,9 @@ header {
 /* Optional: make the button focusable for accessibility */
 .ro-button:focus {
   outline: 2px solid #000; /* Optional focus outline */
+}
+
+.back-button {
+  position: absolute;
+  left: 20%;
 }
