Add model search page

--- a/static/home.css
+++ b/static/home.css
@@ -188,6 +188,7 @@ header {
 /* Hover effect */
 .ro-button:hover {
   text-decoration: underline; /* Add underline on hover */
+  cursor: pointer;
 }
 
 /* Optional: make the button focusable for accessibility */
