--- a/static/home.css
+++ b/static/home.css
@@ -113,7 +113,7 @@ header {
 }
 
 #company-logo {
-  width: 120px;
+  width: 100px;
   height: auto;
   margin-bottom: -15px;
 }
@@ -138,7 +138,7 @@ header {
 }
 
 i.step-icon {
-  font-size: 40px;
+  font-size: 20px;
   text-align: center;
   margin-bottom: 5px;
 }
@@ -155,7 +155,7 @@ i.step-icon {
 
 /* Content Section Styles */
 #content {
-  padding: 40px 5%;
+  padding: 40px 5% 5px 5%;
   background-color: #ffffff;
   text-align: center;
   margin-left: auto;
@@ -193,7 +193,7 @@ i.step-icon {
 
 .back-button {
   position: absolute;
-  left: 20%;
+  left: 16%;
 }
 
 .hidden {
