--- a/static/pages/css/model_details.css
+++ b/static/pages/css/model_details.css
@@ -9,7 +9,7 @@
 .column {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .column-left {
@@ -18,6 +18,10 @@
 
 .column-right {
   width: 25%;
+}
+
+.column-right h2 {
+  font-size: 1.3em;
 }
 
 .tags {
@@ -30,6 +34,10 @@
 
 .model-description {
   margin-top: 20px;
+}
+
+.model-description p {
+  font-size: 17px;
 }
 
 
@@ -63,17 +71,17 @@
 
 /* Rows within each column */
 .row {
-  padding: 20px;
+  padding: 12px;
   margin-bottom: 20px;
-  background-color: #f9f9f9;
+  background-color: #f7f7f7;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* First column's rows specific styles */
-.chosen-model {
+/* .chosen-model {
   flex: 1;
-}
+} */
 
 .similar-models {
   max-height: 280px;
@@ -137,6 +145,34 @@
 /* Second column's rows specific styles */
 .mileukosten {
   height: 65%;
+  display: flex;
+  flex-direction: column;
+}
+
+.info-section {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+}
+
+.info-section i {
+  font-size: 40px;
+}
+
+.info-section p {
+  font-size: 22px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.info-section.reliability p {
+  font-size: 16px;
+  word-wrap: break-word;
+  max-width: 70%;
 }
 
 .not-available {
@@ -152,8 +188,13 @@
   font-size: 25px;
 }
 
-.betrouwbaarheid-informatie {
+.bron-informatie {
   height: 35%;
 }
 
-/* General styles for descriptions */
+.button-container {
+  margin-top: 10px;
+  display: flex;
+  justify-content: right;
+  margin-top: 20px;
+}
