--- a/static/pages/css/start.css
+++ b/static/pages/css/start.css
@@ -1,26 +1,52 @@
-#content {
-  /* display: flex;
-  flex-direction: column; */
+.buttons-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  height: 380px; /* Span most of the height */
+  gap: 20px;
+  margin-top:30px;
 }
 
+.button-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 48%; /* Button spans half of the width */
+  height: 100%;
+  background-color: var(--donkerblauw-1);
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  transition: background-color 0.1s ease;
+  color: white;
+  cursor: pointer;
+}
 
+.button-box:hover {
+  background-color: var(--donkerblauw);
+}
 
-.title {
+.button-header {
   font-size: 38px;
-  margin-bottom: 16px;
 }
 
 .desc-text {
-  font-size: 28px;
-  margin-bottom: 24px;
+  font-size: 20px;
+  margin-top: 10px;
+  color: white;
 }
 
+.own-model {
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+  padding: 15px;
+}
 
-.button-container {
-  display: flex;
-  flex-direction: column;
-  gap: 8px; /* The space between buttons, equivalent to gap-2 */
-  /* margin-left: auto;
-  margin-right: auto; */
-  place-items: center;
+.own-model .button-header {
+  font-size: 18px;
 }
