--- a/static/home.css
+++ b/static/home.css
@@ -106,6 +106,13 @@ a {
   cursor: pointer;
 }
 
+.top-bar {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1000;
+}
+
 /* Header Styles */
 header {
   text-align: center;
