--- a/static/pages/css/task.css
+++ b/static/pages/css/task.css
@@ -1,41 +1,6 @@
-#content {
-  text-align: left;
-}
-
-h2.header {
-  color: #333;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-h3.header {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-p {
-  line-height: 1.6;
-}
-
-
-.text-container {
-  background-color: #f7f7f7; /* Light background for the sustainability text */
-  border-bottom: 2px solid #ddd;
-  margin-top: 30px;
-  padding: 20px;
-}
-
-/* Categories section */
-.categories {
+.category-header {
   margin-top: 30px;
 }
-
-hr {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border-top: 1px solid #ddd;
-}
-
 
 /* Subtasks styling */
 .subtasks {
@@ -43,6 +8,7 @@ hr {
   flex-wrap: wrap; /* Allows subtasks to wrap to the next row */
   gap: 20px; /* Adds space between the subtask cards */
   margin-right: -40px;
+  margin-top: 30px;
 }
 
 .subtask {
@@ -50,13 +16,15 @@ hr {
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 15px;
-  width: 150px;
-  height: 160px;
+  width: 190px;
+  height: 210px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
 
 /* clickable */
@@ -65,13 +33,30 @@ hr {
   background-color: #f7f7f7;
 }
 
-.subtask h4 {
-  font-size: 16px;
+.info-icon {
+  position: absolute; /* Position relative to subtask container */
+  bottom: 10px; /* Distance from bottom */
+  right: 10px; /* Distance from right */
+  color: rgb(150, 150, 150);
+}
+
+.info-icon:hover {
+  color: rgb(100, 100, 100);
+}
+
+.label {
+  font-size: 19px;
   margin-bottom: 10px;
-  color: #333;
+  color: black;
+  padding-bottom: 10px;
 }
 
 .icon {
-  font-size: 21px;
+  font-size: 26px;
   margin-bottom: 10px;
+}
+
+.summary {
+  color:rgb(150, 150, 150);
+  padding-bottom: 30px;
 }
