--- a/static/pages/css/model_details.css
+++ b/static/pages/css/model_details.css
@@ -72,21 +72,14 @@
 /* Rows within each column */
 .row {
   padding: 12px;
-  margin-bottom: 20px;
   background-color: #f7f7f7;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* First column's rows specific styles */
-/* .chosen-model {
-  flex: 1;
-} */
-
 .similar-models {
-  max-height: 280px;
+  margin-top: 20px;
   position: relative;
-  margin-bottom: 5px;
 }
 
 .similar-models table {
@@ -102,7 +95,7 @@
 
 .similar-models tbody {
   display: block;
-  max-height: 180px;
+  max-height: 200px;
   overflow-y: scroll; /* Allow scrolling */
 }
 
@@ -189,6 +182,7 @@
 }
 
 .bron-informatie {
+  margin-top: 20px;
   height: 35%;
 }
 
