small fixes for pilot

--- a/static/pages/css/category_models.css
+++ b/static/pages/css/category_models.css
@@ -3,6 +3,10 @@
   flex-direction: column;
 }
 
+.page-title {
+  margin-bottom: 10px;
+}
+
 .table-container {
   margin-top: 5px;
   max-height: 60vh; /* Set a max height for the table container */
