--- a/static/pages/css/welcome.css
+++ b/static/pages/css/welcome.css
@@ -1,3 +1,10 @@
+.welcome {
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+
 .welcome-text {
   font-size: 2em;
   margin-bottom: 20px;
