--- a/static/pages/css/welcome.css
+++ b/static/pages/css/welcome.css
@@ -44,7 +44,7 @@
 
 .stat-card {
   width: 30%;
-  padding: 20px;
+  padding: 5px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -52,7 +52,8 @@
 }
 
 .stat-card h3 {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  font-size: 25px;
 }
 
 .button-container {
@@ -91,7 +92,7 @@ button {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-  width: 50%; /* Reduced width to ensure current chapter is centered */
+  width: 65%; /* Reduced width to ensure current chapter is centered */
   white-space: nowrap;
   overflow: hidden;
 }
@@ -139,10 +140,13 @@ button {
 /* Chapter Content */
 .chapter-content {
   width: 80%;
-  margin-top: 20px;
-  padding: 20px;
+  text-align: left;
+}
+
+.sub-page-content {
   border: 1px solid #ccc;
   background-color: white;
   border-radius: 10px;
-  text-align: center;
+  margin-top: 20px;
+  padding: 20px;
 }
