--- a/static/pages/css/task.css
+++ b/static/pages/css/task.css
@@ -34,6 +34,16 @@
   background-color: #f7f7f7;
 }
 
+.subtask img {
+  width: 45px;
+  height: 45px;
+  margin-bottom: -10px;
+}
+
+.subtask i {
+  color: var(--logoblauw);
+}
+
 .info-icon {
   position: absolute; /* Position relative to subtask container */
   bottom: 10px; /* Distance from bottom */
