small design changes

--- a/static/pages/css/finalize.css
+++ b/static/pages/css/finalize.css
@@ -15,7 +15,7 @@
 
 .header {
   text-align: center;
-  background-color: var(--donkerblauw);
+  background-color: var(--logoblauw);
   padding: 10px;
   border-radius: 8px;
   margin-top: -40px;
