--- a/static/pages/css/goal.css
+++ b/static/pages/css/goal.css
@@ -6,7 +6,7 @@
 }
 
 .category-bar {
-  background-color: var(--donkerblauw-1);
+  background-color: var(--logoblauw);
   color: white;
   padding: 15px 20px;
   margin-bottom: 10px;
@@ -19,7 +19,7 @@
 }
 
 .category-bar:hover {
-  background-color: var(--donkerblauw);
+  background-color: var(--logoblauw-1);
 }
 
 .category-title {
