--- a/static/pages/css/task.css
+++ b/static/pages/css/task.css
@@ -16,7 +16,7 @@
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 15px;
+  padding: 15px 15px 35px 15px;
   width: 190px;
   height: 210px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -58,9 +58,7 @@
 
 .label {
   font-size: 19px;
-  margin-bottom: 10px;
   color: black;
-  padding-bottom: 10px;
 }
 
 .icon {
@@ -70,5 +68,4 @@
 
 .summary {
   color:rgb(150, 150, 150);
-  padding-bottom: 30px;
 }
