--- a/static/pages/css/welcome.css
+++ b/static/pages/css/welcome.css
@@ -23,7 +23,7 @@
   top: -20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: var(--donkerblauw);
+  background-color: var(--logoblauw);
   color: white;
   padding: 5px 10px;
   border-radius: 15px;
