clean HTML, CSS, JS

--- a/static/pages/css/model_details.css
+++ b/static/pages/css/model_details.css
@@ -9,7 +9,6 @@
 .column {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
 }
 
 .column-left {
@@ -144,13 +143,13 @@
   overflow-y: scroll; /* Allow scrolling */
 }
 
-/* Hide scrollbar for Chrome, Safari, Edge */
+/* Hide scrollbar */
 .similar-models tbody::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
 
-/* Hide scrollbar for Firefox */
+/* Hide scrollbar */
 .similar-models tbody {
   scrollbar-width: none; /* Firefox hides scrollbar */
 }
